plf/src/snapshot_tests/snapshots/plf__snapshot_tests__parser__parser_errors@list_comprehension_multiple_for.txt.snap
---
source: plf/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: plf/src/snapshot_tests/parser_inputs/errors/list_comprehension_multiple_for.txt
---
error: List comprehensions support only a single `for` clause.
 --> list_comprehension_multiple_for.txt:1:19
  |
1 | {{ [x for x in xs for y in ys] }}
  |                   ^^^
