plf/src/snapshot_tests/snapshots/plf__snapshot_tests__parser__parser_errors@multiple_extends.txt.snap
---
source: plf/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: plf/src/snapshot_tests/parser_inputs/errors/multiple_extends.txt
---
error: Template is already extending `a`
 --> multiple_extends.txt:2:11
  |
2 | {% extends "b" %}
  |            ^^^
