plf/src/snapshot_tests/snapshots/plf__snapshot_tests__parser__parser_errors@negation_missing_expr.txt.snap
---
source: plf/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: plf/src/snapshot_tests/parser_inputs/errors/negation_missing_expr.txt
---
error: Found `}}` but expected one of: integer, float, string, bool, ident, `-`, `not`, `<`, `{`, `[` or `(`
 --> negation_missing_expr.txt:1:7
  |
1 | {{ not }}
  |        ^^
