plf/src/snapshot_tests/snapshots/plf__snapshot_tests__parser__parser_errors@nested_kwargs_too_deep.txt.snap
---
source: plf/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: plf/src/snapshot_tests/parser_inputs/errors/nested_kwargs_too_deep.txt
---
error: The expression is too complex
 --> nested_kwargs_too_deep.txt:1:159
  |
1 | {{ f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=f(a=1)))))))))))))))))))))))))))))))))))))))))))))))))) }}
  |                                                                                                                                                               ^
