plf/src/snapshot_tests/snapshots/plf__snapshot_tests__parser__parser_errors@nested_tags_too_deep.txt.snap
---
source: plf/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: plf/src/snapshot_tests/parser_inputs/errors/nested_tags_too_deep.txt
---
error: The template nesting is too deep
 --> nested_tags_too_deep.txt:1:719
  |
1 | {% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}{% filter upper %}x{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}{% endfilter %}
  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               ^^
