plf/src/snapshot_tests/snapshots/plf__snapshot_tests__parser__parser_errors@postfix_not_before_subscript.txt.snap
---
source: plf/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: plf/src/snapshot_tests/parser_inputs/errors/postfix_not_before_subscript.txt
---
error: `not` is only valid here as part of `not in`
 --> postfix_not_before_subscript.txt:1:6
  |
1 | {{ x not [0] }}
  |      ^^^
